fix topbar text alignment

--- a/src/Components/TopBar/TopBar.scss
+++ b/src/Components/TopBar/TopBar.scss
@@ -20,6 +20,7 @@
 
   &,
   h1,
+  span,
   a {
     color: $OFF_BLACK;
     text-decoration: none;
@@ -54,6 +55,10 @@
     a {
       text-decoration: underline;
       text-underline-position: from-font;
+    }
+    span,
+    a {
+      vertical-align: sub;
     }
   }
 
